todo_app/todo_backend/manifests/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: project
  name: todo-backend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: todo-backend
  template:
    metadata:
      labels:
        app: todo-backend
    spec:
      containers:
      - name: todo-backend
        image: berkturetkenwartsila/todo_backend:0.6
        # configuring *all* key-value pairs in ConfigMap as (container) environment variables
