todo_app/todo_backend/manifests/service.yaml
apiVersion: v1
kind: Service
metadata:
  namespace: project
  name: todo-backend-svc
spec:
  type: ClusterIP
  selector:
    app: todo-backend
  ports:
  - name: http
    protocol: TCP
    port: 5678          # the port that is available to the cluster
    targetPort: 8090    # target port
